# matrix-goose

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_rooms.py
src/: lib.rs
src/matrix/: account.rs  builder.rs  http_client.rs  login_builder.rs  media.rs  mod.rs  sync.rs
src/matrix/config/: mod.rs  request.rs
src/matrix/event_handler/: context.rs  mod.rs
src/matrix/room/: common.rs  invited.rs  joined.rs  left.rs  member.rs  mod.rs
